checking to see if px instead of rem will affect spacing issue in css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,7 +59,7 @@ text-align: center;
 }
 .number-input.number-input {
 border: 1px solid #ced4da;
-width: 10rem;
+width: 149px;
 border-radius: .25rem;
 }
 .number-input.number-input button {
